Slide 3: Add lidar 2d video

--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -25,3 +25,10 @@
         \item La odometría basada en encoders acumula error rápidamente por diferencias físicas en en las ruedas, deslizamiento o giro en el aire de las ruedas.
     \end{itemize}
 \end{frame}
+
+\begin{frame}
+    \frametitle{Optical encoders}
+    
+
+\end{frame}
+
