--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -1,11 +1,20 @@
 \begin{frame}
     \frametitle{LiDAR 2D}
     
-    
+        
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=0.8\columnwidth]{images/lidar_example.pdf}
+        \subfloat[]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.20\columnwidth,valign=m]{./images/lidar_2d_video.jpg}}{./videos/lidar_2d.mp4}
+        }
+        \hspace{2em}
+        \subfloat[]
+        {
+            \includegraphics[width=0.48\columnwidth,valign=m]{images/lidar_example.pdf}
+        }
     \end{figure}
+
 
     \note{imagen extraida de:  https://cdn.sick.com/media/docs/3/43/443/operating_instructions_lms1104c_111031s01_2d_lidar_sensors_en_im0079443.pdf}
 
