Slide 3: Add encoder videos

--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -29,6 +29,18 @@
 \begin{frame}
     \frametitle{Optical encoders}
     
+    \begin{figure}[!h]
+        \centering
+        \subfloat[Encoder Incremetal]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/incremental_optical_encoder_video.jpg}}{./videos/incremental_optical_encoder.mp4}
+        }\\
+        \subfloat[Encoder Absoluto]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/absolute_optical_encoder_video.jpg}}{./videos/absolute_optical_encoder.mp4}
+        }
+    \end{figure}
+    
 
 \end{frame}
 
