Slide 3: minor changes

--- a/teoricas/teorica_03/src/encoders.tex
+++ b/teoricas/teorica_03/src/encoders.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{Optical encoders}
+    \frametitle{Encoders Ópticos}
     \scriptsize
     \includegraphics[width=0.45\columnwidth]{images/encoder_principle}
     \includegraphics[width=0.46\columnwidth]{images/encoder_parts}
@@ -12,7 +12,23 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Optical encoders}
+    \frametitle{Encoders Ópticos}
+    
+    \begin{figure}[!h]
+        \centering
+        \subfloat[Encoder Incremetal]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/incremental_optical_encoder_video.jpg}}{./videos/incremental_optical_encoder.mp4}
+        }\\
+        \subfloat[Encoder Absoluto]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/absolute_optical_encoder_video.jpg}}{./videos/absolute_optical_encoder.mp4}
+        }
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Encoders Ópticos}
 
     \includegraphics[width=\columnwidth]{images/encoder.pdf}
     \footnotesize
@@ -26,21 +42,5 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}
-    \frametitle{Optical encoders}
-    
-    \begin{figure}[!h]
-        \centering
-        \subfloat[Encoder Incremetal]
-        {
-            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/incremental_optical_encoder_video.jpg}}{./videos/incremental_optical_encoder.mp4}
-        }\\
-        \subfloat[Encoder Absoluto]
-        {
-            \movie[autostart,loop,poster]{\includegraphics[width=0.6\columnwidth,valign=m]{./images/absolute_optical_encoder_video.jpg}}{./videos/absolute_optical_encoder.mp4}
-        }
-    \end{figure}
-    
 
-\end{frame}
 
