Slide 3: Add gyroscope video

--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -2,6 +2,8 @@
     \frametitle{Giróscopo o Giroscopio}
     \scriptsize
     \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.25\columnwidth]{./images/gyroscope_video.jpg}}{./videos/gyroscope.mp4}
+        \hspace{1em}
         \includegraphics[width=0.15\columnwidth]{images/gyroscope.pdf}
         \hspace{1em}
         \includegraphics[width=0.4\columnwidth]{images/gyroscope_precession.pdf}
@@ -29,11 +31,13 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Giróscopo: Pricipios giroscópicos}
+    \frametitle{Giróscopo: Principios giroscópicos}
     \note{https://www.youtube.com/watch?v=nhNg-8RSuKY}
     \scriptsize
     
     \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.25\columnwidth]{./images/gyroscope_video.jpg}}{./videos/gyroscope.mp4}
+        \hspace{1em}
         \includegraphics[width=0.15\columnwidth]{images/gyroscope.pdf}
         \hspace{1em}
         \includegraphics[width=0.4\columnwidth]{images/gyroscope_precession.pdf}
