Slide 3: improve magnetometer slides

--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -1,25 +1,27 @@
 \begin{frame}
-    \frametitle{Compass}
-    \begin{figure}[!h]
+    \frametitle{Magnetómetro}
+    \begin{center}
         \includegraphics[width=0.2\columnwidth]{images/earth_magnetic_field.pdf}
         \hspace{1cm}
         \includegraphics[width=0.3\columnwidth]{images/magnetic_field.pdf}
-    \end{figure}
+    \end{center}
     \scriptsize
     \begin{block}{Principio de funcionamiento}
         \begin{itemize}
             
-            \item La Tierra es un imán masivo pero débil. Los polos del campo geomagnético son los polos magnéticos norte y sur. Los mismos se mueven constantemente y se encuentran a cierta distancia del eje de rotación de la Tierra.
+            \item La Tierra es un imán masivo pero débil. Los polos del campo geomagnético son los polos magnéticos Norte y Sur. Los mismos se mueven constantemente y se encuentran a cierta distancia del eje de rotación de la Tierra.
     
             \item En cualquier punto del planeta, las líneas de flujo magnético pueden considerarse un vector $\vec{m}$ cuya magnitud y dirección pueden predecirse y trazarse con precisión.
             
-            \item Describimos la dirección del vector en términos de dos ángulos: declinación ($D$) e inclinación ($I$).
+            \item Describimos la dirección del vector $\vec{m}$ en términos de dos ángulos: \textbf{ángulo de Declinación} ($D$) e \textbf{ángulo de Inclinación} ($I$).
             
             \begin{itemize}
                 \scriptsize
-                \item Una proyección horizontal del vector $\vec{m}$ apunta en la dirección del norte magnético y el ángulo de declinación $D$ se mide desde el norte verdadero, en el sentido de las agujas del reloj hasta esa proyección.
+                \item Una proyección horizontal del vector $\vec{m}$ apunta en la dirección del norte magnético y el \textbf{ángulo de declinación} $D$ se mide desde el norte verdadero, en el sentido de las agujas del reloj hasta esa proyección.
             
-                \item El ángulo de inclinación $I$ del vector se mide en un plano vertical hacia abajo desde la horizontal hasta $\vec{m}$. La longitud del vector, la intensidad del campo magnético, se mide con un magnetómetro en unidades de Tesla (T) y para la Tierra varía de $25-\SI{65}{\micro\tesla}$.
+                \item El \textbf{ángulo de inclinación} $I$ del vector se mide en un plano vertical hacia abajo desde la horizontal hasta $\vec{m}$.
+                
+                \item La longitud del vector, la \textbf{intensidad del campo magnético}, se mide con un magnetómetro en unidades de Tesla (T) y para la Tierra varía de $25-\SI{65}{\micro\tesla}$.
             \end{itemize}
         \end{itemize}
     \end{block}
