Slide 3: Add hall effect video

--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -29,16 +29,16 @@
 
 
 \begin{frame}
-    \frametitle{Compass}
+    \frametitle{Magnetómetro}
     \scriptsize
-    \begin{figure}[!h]
-        \centering
+    \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.4\columnwidth]{./images/hall_effect_video.jpg}}{./videos/hall_effect.mp4}
         \includegraphics[width=0.3\columnwidth]{electromagnetism.jpg}
-    \end{figure}
+    \end{center}
 
     \begin{block}{Principio de funcionamiento}
         \begin{itemize}
-        \item El elemento clave de la mayoría de los magnetómetros modernos es un sensor de efecto Hall, un dispositivo semiconductor que produce un voltaje proporcional a la intensidad del campo magnético en una dirección normal al flujo de corriente.
+        \item El elemento clave de la mayoría de los magnetómetros modernos es un \textbf{sensor de efecto Hall}, un dispositivo semiconductor que produce un voltaje proporcional a la intensidad del campo magnético en una dirección normal al flujo de corriente.
         \item Normalmente, tres sensores de efecto Hall se empaquetan juntos y se disponen de modo que sus ejes sensibles sean ortogonales.
         \item Las tres salidas de dicho magnetómetro triaxial son los componentes del vector de intensidad del campo magnético de la Tierra m medido en la estructura del cuerpo $\bodyCoordSystem$.
         \end{itemize}
@@ -46,7 +46,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Compass}
+    \frametitle{Magnetómetro}
     \begin{figure}[!h]
         \centering
         \subfloat[Magnetic field intensity]
@@ -66,7 +66,7 @@
 
 
 \begin{frame}
-    \frametitle{Compass}
+    \frametitle{Magnetómetro}
 
     \begin{center}
         \includegraphics[width=0.5\columnwidth]{images/magnetic_field.pdf}
@@ -81,7 +81,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Compass}
+    \frametitle{Magnetómetro}
 
     \begin{center}
         \includegraphics[width=0.5\columnwidth]{pioneer_10.jpg}
@@ -90,7 +90,7 @@
 
 
 \begin{frame}
-    \frametitle{Compass}
+    \frametitle{Magnetómetro}
     \scriptsize
     Considere un marco de coordenadas inerciales $\{ 0 \}$ con su eje $z$ verticalmente hacia arriba y su eje $x$ apuntando hacia el norte magnético. Por lo tanto, el vector de intensidad del campo magnético $I$ se encuentra en el plano $xz$.
 
