--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -12,7 +12,7 @@
     \begin{block}{Principio de funcionamiento}
         \begin{itemize}
             \item Un giróscopo es todo cuerpo simétrico en rotación a una velocidad suficiente como para experimentar los efectos giroscópicos.
-            \item Los giroscopios son dispositivos que miden o mantienen el movimiento de rotación.
+            \item Los giróscopos son dispositivos que miden o mantienen el movimiento de rotación.
         \end{itemize}
 
     \end{block}
@@ -21,7 +21,7 @@
         \item Introceptivo
         \item Pasivo
         \item Mide Velocidad Angular
-        \item Unidad de medición $\si{\degree\second}$ o Revoluciones por Minuto (RPM)
+        \item Unidad de medición $\si{\degree\per\second}$ o Revoluciones por Minuto (RPM)
     \end{itemize}
 
     \note{https://answeringatpl.com/instrumentation/gyroscopic-principles/\\
@@ -47,14 +47,14 @@
     \begin{block}{Rigidez en el espacio}
         \begin{itemize}
             \item Al rotar, un giróscopo permanece en una posición fija en su plano de rotación, independientemente del movimiento de los soportes o el marco.
-            \item La cantidad de rigidez que presenta el giróscopo es directamente proporcional a su velocidad de rotación (RPM) y su momento de inercia.
+            \item La cantidad de \textbf{rigidez} que presenta el giróscopo es directamente proporcional a su velocidad de rotación (RPM) y su momento de inercia.
             \item Mayor velocidad de rotación, entonces mayor rigidez en el espacio.
             \item Mayor masa y radio efectivo, entonces mayor rigidez en el espacio.
         \end{itemize}
     \end{block}
     }
     \only<2>{
-    \begin{block}{Precesión}
+    \begin{block}{Movimiento dePrecesión}
         \begin{itemize}
             \item Toda fuerza aplicada perpendicularmente sobre el plano de rotación de un giróscopo se verá reflejada a $\SI{90}{\degree}$ en el sentido de la rotación.
             \item La magnitud de la precesión que pesenta el giróscopo es directamente proporcional a la fuerza aplicada e inversamente proporcional a la velocidad de rotación (RPM).
@@ -71,17 +71,28 @@
     \note{https://www.analog.com/en/technical-articles/mems-gyroscope-provides-precision-inertial-sensing.html}
     \footnotesize
     \begin{block}{Principio de Funcionamiento}
-        Los giroscopios MEMS utilizan la fuerza de Coriolis, la fuerza tangencial experimentada por un objeto giratorio en movimiento radial.
+        Los giróscopos MEMS utilizan la fuerza de Coriolis, la fuerza tangencial experimentada por un objeto giratorio en movimiento radial.
     \end{block}
 
-
-    \begin{figure}[!h]
-        \centering
-        \includegraphics[width=0.2\columnwidth]{images/gyroscope_mems_1.png}
+    \begin{figure}
+        \subfloat[]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.19\columnwidth,valign=m]{./images/coriolis_force_video.jpg}}{./videos/coriolis_force.mp4}
+        }
+        \hspace{2em}
+        \subfloat[]
+        {
+            \movie[autostart,loop,poster]{\includegraphics[width=0.2\columnwidth,valign=m]{./images/coriolis_force2_video.jpg}}{./videos/coriolis_force2.mp4}
+        }
+        \hspace{2em}
+        \subfloat[]
+        {
+            \includegraphics[width=0.2\columnwidth,valign=m]{images/gyroscope_mems_1.png}
+        }
     \end{figure}
 
     Ejemplo de aceleración de Coriolis:
-    Una persona que se mueve hacia el norte hacia el borde exterior de una plataforma giratoria debe aumentar el componente de velocidad hacia el oeste (flechas azules) para mantener un rumbo hacia el norte. La aceleración requerida es la aceleración de Coriolis.
+    Una persona que se mueve hacia el borde exterior Norte de una plataforma giratoria en sentido horario, debe aumentar el componente de velocidad hacia el Oeste (flechas azules) para mantener su rumbo hacia el Norte. La aceleración requerida es la \textbf{aceleración de Coriolis}.
 
     \note{Considérese parado en una plataforma giratoria, cerca del centro. Su velocidad relativa al suelo se muestra como la longitud de la flecha azul. Si tuviera que moverse a un punto cerca del borde exterior de la plataforma, su velocidad aumentaría en relación con el suelo, como lo indica la flecha azul más larga. La tasa de aumento de su velocidad tangencial, causada por su velocidad radial, es la aceleración de Coriolis.}
 
