Slide 3: Add accelerometer videos

--- a/teoricas/teorica_03/src/camera.tex
+++ b/teoricas/teorica_03/src/camera.tex
@@ -8,17 +8,25 @@
 
 \begin{frame}
     \frametitle{Modelo de cámara Pinhole}
+    \scriptsize
     \begin{figure}[!h]
-    \centering
-    \subfloat[]
-    {
-        \includegraphics[width=0.55\columnwidth]{images/camera_sensor.png}
-    }
-    \subfloat[]
-    {
-        \includegraphics[width=0.4\columnwidth]{images/camera_color_mono_bayer_pattern.png}
-    }
-\end{figure}
+        \subfloat[]
+        {
+            \includegraphics[width=0.55\columnwidth]{images/camera_sensor.png}
+        }
+        \subfloat[]
+        {
+            \includegraphics[width=0.4\columnwidth]{images/camera_color_mono_bayer_pattern.png}
+        }
+    \end{figure}
+
+    \begin{itemize}
+        \item Exteroceptivo
+        \item Pasivo
+        \item Capturan gran cantidad de información (información semántica)
+        \item Las imágenes presentan blur ante movimientos rápidos o de poca luz
+        \item Requiere escenas bien iluminadas
+    \end{itemize}
 
 \end{frame}
 
