--- a/teoricas/teorica_03/src/time_of_flight.tex
+++ b/teoricas/teorica_03/src/time_of_flight.tex
@@ -1,5 +1,15 @@
 \begin{frame}
     \frametitle{Cámara Time of Flight}
+    \note{https://en.wikipedia.org/wiki/Time-of-flight_camera}
     
-    funciona de manera similar a un lidar con la ventaja de que toda la escena 3D se captura al mismo tiempo y que no hay partes móviles. Este dispositivo utiliza una fuente de luz infrarroja modulada para determinar la distancia de cada píxel de un sensor Photonic Mixer Device (PMD).
+    \begin{block}{Principio de funcionamiento}
+        Funciona de manera similar a un lidar con la ventaja de que toda la escena 3D se captura al mismo tiempo y que no hay partes móviles. Este dispositivo utiliza una fuente de luz infrarroja modulada para determinar la distancia de cada píxel de un sensor Photonic Mixer Device (PMD).
+    \end{block}
+    
+    \begin{itemize}
+        \item Esteroceptivo
+        \item Activo
+       
+    \end{itemize}
+    
 \end{frame}
