Slide 3: Improve slides

--- a/teoricas/teorica_03/src/laser.tex
+++ b/teoricas/teorica_03/src/laser.tex
@@ -77,7 +77,7 @@
 
     \begin{figure}[!h]
         \centering
-        \includegraphics[width=\columnwidth]{images/lidar3d.png}
+        \includegraphics[width=0.85\columnwidth]{images/lidar3d.png}
     \end{figure}
 
 \end{frame}
