--- a/teoricas/teorica_03/src/time_of_flight.tex
+++ b/teoricas/teorica_03/src/time_of_flight.tex
@@ -9,7 +9,8 @@
     \begin{itemize}
         \item Esteroceptivo
         \item Activo
-       
+        \item La precisión suele estimarse en un $\SI{1}{\percent}$ de la distancia medida, suelen tener un frame rate de unos $\SI{160}{\hertz}$
+        \item La luz del entorno mete ruido
     \end{itemize}
     
 \end{frame}
