Slide 3: Improve Time-of-flight slides

--- a/teoricas/teorica_03/src/time_of_flight.tex
+++ b/teoricas/teorica_03/src/time_of_flight.tex
@@ -20,7 +20,7 @@
         En el método de onda continua (2):
         
         \begin{equation*}
-            d = d\frac{c t}{2\pi} \arctan \dfrac{q_{3} - q_{4}}{q_{1} - q_{2}}
+            d = \frac{c t}{2\pi} \arctan \dfrac{q_{3} - q_{4}}{q_{1} - q_{2}}
         \end{equation*}        
     \end{block}
     
