Slide 3: Add ultrasonic sensor image

--- a/teoricas/teorica_03/src/sonar.tex
+++ b/teoricas/teorica_03/src/sonar.tex
@@ -1,6 +1,12 @@
 \begin{frame}
     \frametitle{Sensor Ultrasónico}
-    \small
+    \scriptsize
+    
+    \begin{center}
+        \includegraphics[width=0.2\columnwidth]{images/ultrasonic_sensor.pdf}
+    \end{center}
+    
+    
     \begin{block}{Principio de funcionamiento}
         El principio básico de un sensor ultrasónico es transmitir un paquete de ondas de presión (ultrasónicas) y medir el tiempo que tarda este paquete de ondas en reflejarse y regresar al receptor. La distancia del objeto que causa el reflejo  $d$ se puede calcular en función de la velocidad de propagación del sonido $c$ y el tiempo de vuelo $t$.
    
