--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -32,7 +32,7 @@ El objetivo de este trabajo práctico es comprender el modelo cinemático y la e
 
     \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
     
-    \item En caso de utilizar el framework \url{https://www.theconstructsim.com}, se deberá además el link al proyecto.
+    \item En caso de utilizar el framework \url{https://www.theconstructsim.com}, se deberá proporcionar además el link al proyecto.
 \end{itemize}
 
 
